tests/baselines/reference/objectTypesIdentityWithCallSignaturesDifferingParamCounts(strict=true).errors.txt
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(4,30): error TS2322: Type 'null' is not assignable to type 'string'.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(8,41): error TS2322: Type 'null' is not assignable to type 'string'.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(12,26): error TS2322: Type 'null' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(26,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(27,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(30,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(31,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(34,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(35,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(38,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(39,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(42,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(43,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(46,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(47,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(50,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(51,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(54,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(55,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(58,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(59,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(62,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(63,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(66,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(67,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(70,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(71,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(74,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(75,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(78,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(79,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(82,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(83,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(86,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(87,10): error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(90,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(91,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(94,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(95,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(98,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts(99,10): error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentityWithCallSignaturesDifferingParamCounts.ts (41 errors) ====
    // object types are identical structurally
    
    class A {
        foo(x: string): string { return null; }
                                 ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    }
    
    class B {
        foo(x: string, y: string): string { return null; }
                                            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    }
    
    class C<T> {
        foo(x: T, y: T): T { return null; }
                             ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'null'.
    }
    
    interface I {
        foo(x: string): string;
    }
    
    interface I2<T> {
        foo(x: T): T;
    }
    
    var a: { foo(x: string, y: string): string }
    var b = { foo(x: string) { return ''; } };
    
    function foo1(x: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: A); // error
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo1b(x: B);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5(x: A);
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: B); // ok
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: any) { }
    
    function foo5b(x: A);
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: C<string>); // ok
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I); // error
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // ok
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I); // ok
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<string>); // ok
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // error
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // ok
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<string>); // ok
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo12b(x: I2<string>);
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: C<string>); // ok
             ~~~~~~
!!! error TS7010: 'foo12b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12b(x: any) { }
    
    function foo13(x: I);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // ok
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // error
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }
    
    function foo15(x: I2<string>);
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: C<number>); // ok
             ~~~~~
!!! error TS7010: 'foo15', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo15(x: any) { }